--- a/timeline.html
+++ b/timeline.html
@@ -1,9 +1,9 @@
 ---
 layout: page
 start:
-  date: 1992
+  date: 1994
   title: He was Born
-description: "Entire timeline for hexiang"
+description: "Entire timeline for zhiwen"
 noindex:  true
 ---
 
