--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Full publication list for Hexiang"
+description: "Full publication list for Zhiwen"
 noindex:  true
 ---
 
