--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@ layout: home
   </div>
 </div>
 
+<div id="news" class="news">
+  <h1 class="md-heading text-center">
+    <i class="fa fa-id-card" aria-hidden="true"></i>
+    News
+  </h1>
+  <div class="news-body">
+    <p>
+      {{ site.data.news.normal.content }}
+    </p>
+  </div>
+</div>
 
 <div id="timeline" class="timeline-brief">
   <h1 class="md-heading text-center">
