--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: home
 
 <div id="news" class="news">
   <h1 class="md-heading text-center">
-    <i class="fa fa-id-card" aria-hidden="true"></i>
+    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
     News
   </h1>
   <div class="news-body">
