--- a/timeline.html
+++ b/timeline.html
@@ -2,7 +2,7 @@
 layout: page
 start:
   date: 1994
-  title: He was Born
+  title: I was Born
 description: "Entire timeline for zhiwen"
 noindex:  true
 ---
