--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ layout: home
 
   <div class="button">
     <h1 class="sm-heading text-center">
-      <a href="{{ '/publications/#publications' | prepend: site.baseurl/../ }}">
+      <a href="{{ '/publications/#publications' | prepend: site.baseurl }}">
         <i class="fa fa-info-circle"></i> All Publications
       </a>
     </h1>
