--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ layout: home
         </div>
         <div class="tags">
           {% for tag in publication.tags %}
-            {% if tag.url %}
+            {% if tag.url==null %}
               [<a class="tag" href="{{tag.url}}"> <strong>{{ tag.name }}</strong> </a>]
             {% else %}
               <strong>{{ tag.name }}</strong>
