--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ layout: home
         </div>
         <div class="tags">
           {% for tag in publication.tags %}
-            {% if tag.url==null %}
-              [<a class="tag" href="{{tag.url}}"> <strong>{{ tag.name }}</strong> </a>]
-            {% else %}
+            {% if tag.url == false %}
               <strong>{{ tag.name }}</strong>
+            {% else %}
+              [<a class="tag" href="{{tag.url}}"> <strong>{{ tag.name }}</strong> </a>]
             {% endif %}
           {% endfor %}
         </div>
