--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ layout: home
   <div class="button">
     <h1 class="sm-heading text-center">
       <a href="{{ '/publications/#publications' | prepend: site.baseurl }}">
-        <i class="fa fa-info-circle"></i> All Publications
+        <i class="fa fa-info-circle"></i> More Publications
       </a>
     </h1>
   </div>
