--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@ layout: home
   </div>
 </div>
 
+<div id="projects" class="projects">
+  <h1 class="md-heading text-center">
+    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+    News
+  </h1>
+  <div class="news-body">
+    {% for project in site.data.projects %}
+    <p>
+      {{ project.normal.content }}
+    </p>
+    {% endfor %}
+  </div>
+</div>
+
 <div id="publications" class="publications">
   <h1 class="md-heading text-center">
     <i class="fa fa-file" aria-hidden="true"></i>
