--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: home
 <div id="projects" class="projects">
   <h1 class="md-heading text-center">
     <i class="fa fa-newspaper-o" aria-hidden="true"></i>
-    News
+    Sponsored Projects
   </h1>
   <div class="news-body">
     {% for project in site.data.projects %}
