--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: home
 
 <div id="projects" class="projects">
   <h1 class="md-heading text-center">
-    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+    <i class="fa fa-product-hunt" aria-hidden="true"></i>
     Sponsored Projects
   </h1>
   <div class="news-body">
