--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: home
     <i class="fa fa-product-hunt" aria-hidden="true"></i>
     Sponsored Projects
   </h1>
-  <div class="news-body">
+  <div class="pub-list">
     {% for project in site.data.projects %}
     <p>
       {{ project.normal.content }}
