--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ layout: home
 <div id="patents" class="patents">
   <h1 class="md-heading text-center">
     <i class="fa fa-product-hunt" aria-hidden="true"></i>
-    Selected Patents
+    Granted Patents
   </h1>
   <div class="patents-body">
     {% for patent in site.data.patents %}
