--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: home
 
 <div id="awards" class="awards">
   <h1 class="md-heading text-center">
-    <i class="fa fa-product-hunt" aria-hidden="true"></i>
+    <i class="fa fa-money" aria-hidden="true"></i>
     Awards
   </h1>
   <div class="awards-body">
@@ -99,7 +99,7 @@ layout: home
 
 <div id="patents" class="patents">
   <h1 class="md-heading text-center">
-    <i class="fa fa-product-hunt" aria-hidden="true"></i>
+    <i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
     Granted Patents
   </h1>
   <div class="patents-body">
