--- a/index.html
+++ b/index.html
@@ -97,6 +97,34 @@ layout: home
   </div>
 </div>
 
+<div id="teachings" class="teachings">
+  <h1 class="md-heading text-center">
+    <i class="fa fa-eraser" aria-hidden="true"></i>
+    Teaching Experiences
+  </h1>
+  <div class="teachings-body">
+    {% for teaching in site.data.teachings %}
+    <p>
+      {{ teaching.normal.content }}
+    </p>
+    {% endfor %}
+  </div>
+</div>
+
+<div id="services" class="services">
+  <h1 class="md-heading text-center">
+    <i class="fa fa-telegram" aria-hidden="true"></i>
+    Academic Services
+  </h1>
+  <div class="services-body">
+    {% for service in site.data.services %}
+    <p>
+      {{ service.normal.content }}
+    </p>
+    {% endfor %}
+  </div>
+</div>
+
 <div id="patents" class="patents">
   <h1 class="md-heading text-center">
     <i class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
